fixed the header guest icon that was unaligned and blue color, now correct alignment and brown color

--- a/css/headers/header-homeowner.css
+++ b/css/headers/header-homeowner.css
@@ -54,11 +54,15 @@
 }
 
 .circle{
-    background-color: burlywood;
+    background-color: #FFF29F;
     border-radius: 30px;
     width: 40px;
     height: 40px;
     text-align: center;
+}
+
+.brownt-text{
+    color: #8C6551 !important
 }
 
 @media only screen and (min-width: 992px) {
